--- a/style.css
+++ b/style.css
@@ -45,9 +45,10 @@ a {
 }
 
 .titlegame {
+    display: flex; 
     align-items: center;
     justify-content: center;
-    width: 200px;
+    width: 150px;
     height: 100px;
  
 }
