--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -5,7 +5,7 @@ body {
 
 #unity-container {
     position: absolute;
-    margin-top: 75px
+    margin-top: 75px;
 }
 
 #unity-container.unity-desktop {
