--- a/style.css
+++ b/style.css
@@ -36,8 +36,17 @@ b {
     background: url('assets/title.png') no-repeat;
     background-position: center;
     position: absolute;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
+    animation: UpDown 3.5s linear infinite;
+}
+
+.title moi {
+    background: url('assets/title.png') no-repeat;
+    background-position: center;
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
     animation: UpDown 3.5s linear infinite;
 }
 
